2007-11-03  Jens Granseuer  <jensgr@gmx.net>

	* gnome-keyboard-properties.glade: rename first tab to "General"

2007-11-03  Sergey Udaltsov <svu@gnome.org>

	* gnome-keyboard-properties-xkblt.c, gnome-keyboard-properties-xkb.c,
	gnome-keyboard-properties-xkbot.c, gnome-keyboard-properties-xkb.h,
	gnome-keyboard-properties-xkbpv.c, gnome-keyboard-properties.glade,
	gnome-keyboard-properties-xkbltadd.c, gnome-keyboard-properties.c:
	moving layout options to separate popup, according to Denis's mockups.

2007-10-31  Kjartan Maraas  <kmaraas@gnome.org>

	* gnome-keyboard-properties-xkblt.c:
	(xkb_layouts_prepare_selected_tree):
	Fix warnings from sparse. Don't use deprecated signal
	api from gtk+.

2007-08-26  Sergey Udaltsov <svu@gnome.org>

	* gnome-keyboard-properties.glade: make Add label translatable,
	http://bugzilla.gnome.org/show_bug.cgi?id=470516

2007-08-14  Sergey Udaltsov <svu@gnome.org>

	* gnome-keyboard-properties-xkblt.c: disabling "delete" button for
	number of selected layouts < 1.
	http://bugzilla.gnome.org/show_bug.cgi?id=466749

2007-07-24  Sergey Udaltsov <svu@gnome.org>

	* gnome-keyboard-properties-xkblt.c, gnome-keyboard-properties.glade:
	eliminating up/down buttons in the layout list, making it look nicer.

2007-07-23  Sergey Udaltsov <svu@gnome.org>

	* gnome-keyboard-properties-xkblt.c: Implementing DND in the selected
	layouts list. http://bugzilla.gnome.org/show_bug.cgi?id=351936

2007-07-11  Sergey Udaltsov <svu@gnome.org>

	* gnome-keyboard-properties-xkb.h, gnome-keyboard-properties-xkbpv.c,
	gnome-keyboard-properties.glade, gnome-keyboard-properties-xkbltadd.c:
	improving the layout and sorting, thanks to Christian,
	http://bugzilla.gnome.org/show_bug.cgi?id=455353
	* gnome-keyboard-properties.glade: s/group/layout/ - because
	xkeyboard-config is going to have all UI strings as "layout".
	* gnome-keyboard-properties-xkblt.c: redraw the selected layouts
	window when "Separate layout per window" is toggled - otherwise