@@ -1,3 +1,10 @@
+2007-11-03  Denis Washington  <denisw@svn.gnome.org>
+
+	* gnome-keyboard-properties-xkb.c:
+	* gnome-keyboard-properties.glade: Replace text entry and
+	"Choose..." button for keyboard model with a single chooser
+	button.
+
 2007-11-03  Jens Granseuer  <jensgr@gmx.net>
 
 	* gnome-keyboard-properties.glade: rename first tab to "General"
